(library
 (name fiber_bench)
 (modules :standard \ fiber_bench_main)
 (library_flags -linkall)
 (preprocess
  (pps ppx_bench))
 (libraries fiber stdune core_bench.inline_benchmarks))

(executable
 (name fiber_bench_main)
 (allow_overlapping_dependencies)
 (modules fiber_bench_main)
 (libraries fiber_bench core_bench.inline_benchmarks))
