(library
 (name dune_fiber_tests)
 (package fiber)
 (inline_tests)
 (libraries
  stdune
  fiber
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect.common
  base
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))
